Added some error handling

--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,17 @@
             <version>1.18.8</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.12</artifactId>
+            <version>2.5.15</version>
+        </dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>13.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
