--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,7 +31,7 @@ akka {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 }
 
