--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -2,6 +2,12 @@ include "application"
 
 akka.cluster.min-nr-of-members = 1
 
+rotakka.twittercrawling.startDate = "01-05-2019"
+rotakka.twittercrawling.endDate = "01-06-2019"
+rotakka.twittercrawling.entryPointUsers = "S100D27,elonmusk,realDonaldTrump,HillaryClinton,ladygaga"
+
+rotakka.proxycrawling.requestPerProxy = 100
+
 #akka.cluster.role {
 #  master.min-nr-of-members = 1
 #  slave.min-nr-of-members = 0
