--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -2,11 +2,13 @@ include "application"
 
 akka.cluster.min-nr-of-members = 1
 
-rotakka.twittercrawling.startDate = "01-05-2019"
-rotakka.twittercrawling.endDate = "01-06-2019"
-rotakka.twittercrawling.entryPointUsers = "S100D27,elonmusk,realDonaldTrump,HillaryClinton,ladygaga"
+rotakka.twittercrawling.startDate = "01-01-2018"
+rotakka.twittercrawling.endDate = "01-01-2019"
+rotakka.twittercrawling.entryPointUsers = "guardian"
+rotakka.twittercrawling.extractUsers = false
+rotakka.twittercrawling.useProxys = false
 
-rotakka.proxycrawling.requestPerProxy = 100
+rotakka.proxycrawling.requestPerProxy = 1000
 
 #akka.cluster.role {
 #  master.min-nr-of-members = 1
