extended configuration options

--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -1,32 +1,35 @@
 include "application"
 
-akka.cluster.min-nr-of-members = 1
+#akka.cluster.min-nr-of-members = 1
 
-rotakka.twittercrawling.startDate = "01-01-2018"
-rotakka.twittercrawling.endDate = "01-01-2019"
-rotakka.twittercrawling.entryPointUsers = "guardian"
-rotakka.twittercrawling.extractUsers = false
-rotakka.twittercrawling.useProxys = false
+rotakka {
+  twittercrawling {
+    slaveCount = 1
+    startDate = "01-01-2018"
+    endDate = "01-01-2019"
+    entryPointUsers = "guardian"
+    extractUsers = false
+    useProxys = false
+  }
 
-rotakka.proxycrawling.requestPerProxy = 1000
+  proxychecking {
+    slaveCount = 2
+  }
 
-#akka.cluster.role {
-#  master.min-nr-of-members = 1
-#  slave.min-nr-of-members = 0
-#}
+  proxycrawling {
+    slaveCount = 1
+    requestPerProxy = 1000
+  }
 
-#akka.actor.deployment {
-#  /octopus/router = {
-#    router = cluster-metrics-adaptive-group
-#    # metrics-selector = heap
-#    # metrics-selector = load
-#    # metrics-selector = cpu
-#    metrics-selector = mix
-#    routees.paths = ["/user/factorialBackend"]
-#    cluster {
-#      enabled = on
-#      use-role = backend
-#      allow-local-routees = off
-#    }
-#  }
-#}
+  graphstore {
+    slaveCount = 1
+  }
+
+  clusterlistener {
+    create = true
+  }
+
+  metricslistener {
+    create = true
+  }
+}
