extended Settings to Graph Store

--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -9,7 +9,7 @@ rotakka {
     endDate = "01-01-2019"
     entryPointUsers = "guardian"
     extractUsers = false
-    useProxys = false
+    useProxies = false
   }
 
   proxychecking {
@@ -23,6 +23,20 @@ rotakka {
 
   graphstore {
     slaveCount = 1
+
+    # least common multiples are preferable to create even splits for up to n servers
+    # we suggest at least 8 shards per server to keep the storage loads balanced
+    # 2 servers: 16 (to enable load balancing)
+    # 4 servers: 32 (for better load balancing)
+    # 6 servers: 64
+    # 8 servers: 128
+    # 10 servers: 256
+    # 12 servers: 256
+    shardCount = 16
+
+    # the cluster will work even if the duplication level is not fulfilled
+    # therefore, the duplication level is the maximal duplication at runtime (except during copy operations)
+    duplicationLevel = 2
   }
 
   clusterlistener {
