implemented file-backed shard storage at slaves

--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -1,6 +1,6 @@
 include "application"
 
-#akka.cluster.min-nr-of-members = 1
+akka.log-dead-letters-during-shutdown = false
 
 rotakka {
   twittercrawling {
@@ -22,6 +22,8 @@ rotakka {
   }
 
   graphstore {
+    # number of graph store slaves per actor system
+    # recommended to leave it at 1 to prevent storing multiple copies of the same shard on a single node
     slaveCount = 1
 
     # least common multiples are preferable to create even splits for up to n servers
@@ -37,6 +39,10 @@ rotakka {
     # the cluster will work even if the duplication level is not fulfilled
     # therefore, the duplication level is the maximal duplication at runtime (except during copy operations)
     duplicationLevel = 2
+
+    # relative or absolute file path to a directory (without trailing '/' (separator))
+    # vertices and edges of the graph will be stored in files within this directory
+    storagePath = "shards"
   }
 
   clusterlistener {
