fixed graph store file deletion bug - GraphStoreTest now working again

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -2,4 +2,56 @@
 akka.coordinated-shutdown.run-by-jvm-shutdown-hook = off
 akka.coordinated-shutdown.terminate-actor-system = off
 akka.cluster.run-coordinated-shutdown-when-down = off
+akka.log-dead-letters = off
 
+rotakka {
+  twittercrawling {
+    slaveCount = 1
+    startDate = "01-01-2018"
+    endDate = "01-01-2019"
+    entryPointUsers = "guardian"
+    extractUsers = false
+    useProxies = false
+  }
+
+  proxychecking {
+    slaveCount = 2
+  }
+
+  proxycrawling {
+    slaveCount = 1
+    requestPerProxy = 1000
+  }
+
+  graphstore {
+    # number of graph store slaves per actor system
+    # recommended to leave it at 1 to prevent storing multiple copies of the same shard on a single node
+    slaveCount = 1
+
+    # least common multiples are preferable to create even splits for up to n servers
+    # we suggest at least 8 shards per server to keep the storage loads balanced
+    # 2 servers: 16 (to enable load balancing)
+    # 4 servers: 32 (for better load balancing)
+    # 6 servers: 64
+    # 8 servers: 128
+    # 10 servers: 256
+    # 12 servers: 256
+    shardCount = 16
+
+    # the cluster will work even if the duplication level is not fulfilled
+    # therefore, the duplication level is the maximal duplication at runtime (except during copy operations)
+    duplicationLevel = 2
+
+    # relative or absolute file path to a directory (without trailing '/' (separator))
+    # vertices and edges of the graph will be stored in files within this directory
+    storagePath = "shards"
+  }
+
+  clusterlistener {
+    create = true
+  }
+
+  metricslistener {
+    create = true
+  }
+}
