--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -4,21 +4,42 @@ akka.log-dead-letters-during-shutdown = false
 
 rotakka {
   twittercrawling {
+    # The number of TwitterCrawler-actors to start
     slaveCount = 1
+
+    # The start date of the crawling time frame in dd-MM-yyyy
     startDate = "01-01-2018"
+
+    # The end date of the crawling time frame in dd-MM-yyyy
     endDate = "01-01-2019"
+
+    # The users which you want to crawl, seperated by comma if multiple. When extractUsers is true, these are
+    # the entry points for crawling
     entryPointUsers = "guardian"
+
+    # Wheter to extact new users from Tweets. Set this to false if you just want to crawl the specified users and not
+    # additionally crawl the extracted users
     extractUsers = false
+
+    # Whether to use the extracted proxies or not. Using them will slow down the system in exchange for stealth
     useProxies = false
+
+    # The time which to wait on a dymanic page load. Set this accordingly to the quality of proxies you intend to use.
+    dynamicContentWait = 500
+
+    # The number of work packets (i.e. Twitter Advanced Search Links) which will be crawled with a single proxy
+    # before changing to a new one
+    requestPerProxy = 1000
   }
 
   proxychecking {
+    # The number of ProxyChecker-actors to start
     slaveCount = 2
   }
 
   proxycrawling {
+    # The number of ProxyCrawler-actors to start
     slaveCount = 1
-    requestPerProxy = 1000
   }
 
   graphstore {
