Kick small proxies out of Rotakka

--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -35,6 +35,10 @@ rotakka {
   proxychecking {
     # The number of ProxyChecker-actors to start
     slaveCount = 2
+
+    # The maxium response time in millies which a proxy can have in order to be used by Rotakka
+    # Proxies exceeding this value will be dropped
+    maxiumResponseTime = 300
   }
 
   proxycrawling {
