Bash Script Update

--- a/src/main/resources/rotakka.conf
+++ b/src/main/resources/rotakka.conf
@@ -8,10 +8,10 @@ rotakka {
     slaveCount = 1
 
     # The start date of the crawling time frame in dd-MM-yyyy
-    startDate = "01-01-2018"
+    startDate = "09-09-2019"
 
     # The end date of the crawling time frame in dd-MM-yyyy
-    endDate = "01-01-2019"
+    endDate = "10-09-2019"
 
     # The users which you want to crawl, seperated by comma if multiple. When extractUsers is true, these are
     # the entry points for crawling
@@ -19,7 +19,7 @@ rotakka {
 
     # Wheter to extact new users from Tweets. Set this to false if you just want to crawl the specified users and not
     # additionally crawl the extracted users
-    extractUsers = false
+    extractUsers = true
 
     # Whether to use the extracted proxies or not. Using them will slow down the system in exchange for stealth
     useProxies = false
